--- a/todolist/css/main.css
+++ b/todolist/css/main.css
@@ -145,66 +145,18 @@ ul.todo li .buttons button:last-of-type:before{
   background: #9999FF;
 }
 
-/*ul.todo li .buttons button svg{
-  widows: 22px;
-  height: 22px;
-  position: absolute;
-  top: 50%;
+ul.todo#completed:not(:empty) {
+  position: relative;
+  padding: 40 0 0 0;
+}
+
+ul.todo#completed:not(:empty):before{
+  width: 150px;
+  height: 1px;
+  background: #58493D;
+  position:absolute;
+  content: '';
+  top: 0;
   left: 50%;
-  margin: -11px 0 0 -11px;
-}*/
-
-/*ul.todo li .buttons button svg {
-  -webkit-transition:fill 0.2s ease;
-  -moz-transition: fill 0.2s ease;
-  -ms-transition: fill 0.2s ease;
-  -o-transition: fill 0.2s ease;
-  transition:fill 0.2s ease;
-
+  margin: 0 0 0 0;
 }
-
-ul.todo li .buttons button.complete svg{
-  border-radius: 11px;
-  border: 1.5px solid #25B99A;
-
-  -webkit-transition:background 0.2s ease;
-  -moz-transition: background 0.2s ease;
-  -ms-transition: background 0.2s ease;
-  -o-transition: background 0.2s ease;
-  transition:background 0.2s ease;
-}
-
-ul.todo#completed li .buttons button.complete svg{
-  background: #25B99A;
-  border: 0px;
-}
-
-ul.todo:not(#completed) li .buttons button.complete:hover svg{
-  background: rgba(37, 185, 154, 0.5);
-}
-
-ul.todo:not(#completed) li .buttons button.complete:hover svg.fill{
-  fill: #fff;
-}
-
-
-ul.todo#completed li .buttons button.complete svg .fill{
-  fill: #fff;
-}
-
-
-ul.todo li .buttons button.remove svg.fill {
-  fill: #C0CECB;
-}
-
-ul.todo li .buttons button.remove:hover svg.fill {
-  fill: #E85656;
-}
-
-ul.todo li .buttons button.complete svg.fill {
-  fill: #C0CECB;
-}
-
-ul.todo li .buttons button.complete:hover svg.fill {
-  fill: #E85656;
-}*/
