--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,10 @@
 body{
   background: #82BFFF;
-  padding: 0 0 0 100px;
+  padding: 0 0 0 0;
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 body, input, button{
@@ -28,12 +30,14 @@ body, input, button{
 }*/
 
 header {
+  width: 50%;
   display: flex;
   align-items: center;
+  justify-content: center;
 }
 
 header input {
-  width: 50%;
+  width: 100%;
   height: 50px;
   float: left;
   color: #58493D;
@@ -60,7 +64,6 @@ header input:hover{
 header button{
   width: 50px;
   height: 50px;
-  /*position: absolute;*/
   top: 15px;
   right: 15px;
   z-index: 0;
@@ -88,7 +91,7 @@ ul.todo {
 }
 
 ul.todo li{
-  width: 110%;
+  width: 100%;
   height: 36px;
   color: #58493D;
   font-size: 18px;
@@ -116,7 +119,6 @@ ul.todo li{
 ul.todo li .buttons {
   width: 100px;
   height: 35px;
-  background: #C0CECB;
   position: absolute;
   top: 8px;
   right: 2px;
@@ -151,12 +153,10 @@ ul.todo#completed:not(:empty) {
 }
 
 ul.todo#completed:not(:empty):before{
-  width: 150px;
+  width: 40%;
   height: 1px;
   background: #58493D;
-  position:absolute;
+  position: absolute;
   content: '';
-  top: 0;
-  left: 50%;
-  margin: 0 0 0 0;
+  padding: 0 0 0 0;
 }
