--- a/css/main.css
+++ b/css/main.css
@@ -47,8 +47,8 @@ header input {
   background: #fff;
   padding: 0 0 0 0;
   border-radius: 5px;
-  border-width: 0;
-  border-color: none;
+  border-width: 2px;
+  border-color: transparent;
   border-style: solid;
   box-shadow: none;
   outline: none;
@@ -57,7 +57,6 @@ header input {
 
 header input:hover{
   border-color: pink;
-  border-width: 2px;
   box-shadow: 0 0 2px 2px pink;
 }
 
